--- a/src/test.html
+++ b/src/test.html
@@ -11,7 +11,7 @@
     <!-- Date: 2011-04-29 -->
 
 	<style>
-		div {
+		div, a {
 			font-style: helvetica;
 			font-size: 14pt;
 			padding-top: 2px;
