--- a/src/test_hosted.html
+++ b/src/test_hosted.html
@@ -11,11 +11,11 @@
     <!-- Date: 2011-04-29 -->
 
 	<style>
-		div {
+		div, a {
 			font-style: helvetica;
 			font-size: 14pt;
 			padding-top: 2px;
-			padding-left: 10px
+			padding-left: 10px;
 		}
 		.banner {
 			background-color: #FFFFFF;
